// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author should render Default 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <div
      class="emotion-4 emotion-5"
    >
      <img
        alt="DSC07717"
        class="emotion-6 emotion-7"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <aside
        class="emotion-8 emotion-9"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://twitter.com"
          target="__blank"
          title="Twitter"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://facebook.com"
          target="__blank"
          title="Facebook"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://instagram.com"
          target="__blank"
          title="Instagram"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
            />
          </svg>
        </a>
      </aside>
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithError 1`] = `<DocumentFragment />`;

exports[`Author should render WithLoading 1`] = `<DocumentFragment />`;

exports[`Author should render WithoutBio 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <div
      class="emotion-4 emotion-5"
    >
      <img
        alt="DSC07717"
        class="emotion-6 emotion-7"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <aside
        class="emotion-8 emotion-9"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://twitter.com"
          target="__blank"
          title="Twitter"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://facebook.com"
          target="__blank"
          title="Facebook"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-10"
          href="https://instagram.com"
          target="__blank"
          title="Instagram"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
            />
          </svg>
        </a>
      </aside>
    </div>
    <div
      class="emotion-13 emotion-14"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      />
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <div
      class="emotion-4 emotion-5"
    >
      <aside
        class="emotion-6 emotion-7"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
          href="https://twitter.com"
          target="__blank"
          title="Twitter"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
          href="https://facebook.com"
          target="__blank"
          title="Facebook"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
          href="https://instagram.com"
          target="__blank"
          title="Instagram"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
            />
          </svg>
        </a>
      </aside>
    </div>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
    </header>
    <div
      class="emotion-3 emotion-4"
    >
      <img
        alt="DSC07717"
        class="emotion-5 emotion-6"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <aside
        class="emotion-7 emotion-8"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-9"
          href="https://twitter.com"
          target="__blank"
          title="Twitter"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-9"
          href="https://facebook.com"
          target="__blank"
          title="Facebook"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
            />
          </svg>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-9"
          href="https://instagram.com"
          target="__blank"
          title="Instagram"
        >
          <svg
            fill="currentColor"
            height="22"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
            />
          </svg>
        </a>
      </aside>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutLinks 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <div
      class="emotion-4 emotion-5"
    >
      <img
        alt="DSC07717"
        class="emotion-6 emotion-7"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
    </div>
    <div
      class="emotion-8 emotion-9"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-10"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Lorem ipsum dolor sit amet, 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                consectetur adipiscing elit, 
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ut enim ad minim veniam, 
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
